# dnsimple-rs

./: .travis.yml  Cargo.toml  README.md
fixtures.http/whoami/: internal_server_error.http  success.http  unauthorized.http
src/: dnsimple.rs  lib.rs
